components/cryostat/gateway/route-cryostat.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: cryostat
  namespace: istio-ingress
spec:
  to:
    kind: Service
    name: istio-ingressgateway
    weight: 100
  port:
    targetPort: https
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
